--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
  # employer         :
  # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=i_PbBVgAAAAJ&hl=en"
-  email            : email.jpg
+  email            : minghanwei19 at gmail.com
  # researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   # uri              :
   # bitbucket        :
