--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,8 @@
 # main links links
 main:
+  - title: "Research Projects"
+    url: /research-projects/  
+
   - title: "Publications"
     url: /publications/
 
