--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Welcome to my homepage"
 title_separator          : "-"
 name                     : &name "Minghan Wei"
 description              : &description "Minghan Wei's homepage"
-url                      : https://gophermmq.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://minghanwei.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "gophermmq/gophermmq.github.io"
+repository               : "minghanwei/minghanwei.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
