update home page

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ title                    : "Welcome to my homepage"
 title_separator          : "-"
 name                     : &name "Minghan Wei"
 description              : &description "Minghan Wei's homepage"
-url                      : https://minghanwei.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+# url                      : https://minghanwei.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://faculty.eng.fau.edu/weim/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "minghanwei/minghanwei.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
