change avatar photo

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Minghan Wei"
-  avatar           : "myphoto.jpg"
+  avatar           : "headshot_wedding.png"
   bio              : "Assistant Professor, Department of Electrical Engineering and Computer Science, Florida Atlantic University"
   googlescholar    : "https://scholar.google.com/citations?user=i_PbBVgAAAAJ&hl=en"
   email            : weim@fau.edu
