--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   name             : "Minghan Wei"
   avatar           : "headshot_wedding.png"
   bio              : "Assistant Professor, Department of Electrical Engineering and Computer Science, Florida Atlantic University"
-  googlescholar    : "https://scholar.google.com/citations?user=BkxTtGsAAAAJ&hl=en"
+  googlescholar    : "https://scholar.google.com/citations?user=vJvfjQYAAAAJ&hl=en&oi=ao"
   email            : weim@fau.edu
  # researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   # uri              :
