--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,10 @@ main:
   #   url: /talks/    
 
   - title: "Teaching"
-    url: /teaching/    
+    url: /teaching/
+
+  - title: "Team"
+    url: /team/
     
   # - title: "Portfolio"
   #   url: /portfolio/
